--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/herring-cove"]
 	path = themes/herring-cove
 	url = https://github.com/spf13/herring-cove.git
+[submodule "themes/noteworthy"]
+	path = themes/noteworthy
+	url = git@github.com:kimcc/hugo-theme-noteworthy.git
