--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,16 +12,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          fetch-depth: '0'   # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v2.3.0
         with:
-          hugo-version: '0.69.0'
-          # extended: true
+          hugo-version: latest
+          extended: false
 
       - name: Build
-        run: hugo --minify
+        run: hugo
 
       - name: Publish Website
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
