Split Workflows for gh-actions

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -21,15 +21,7 @@ jobs:
           extended: false
 
       - name: Build
-        run: hugo
-
-      - name: Publish Website
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
-        with:
-          ftp-server: ${{ secrets.FTP_SERVER }}
-          ftp-username: ${{ secrets.FTP_USERNAME }}
-          ftp-password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./public
+        run: hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
