--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.1.0
+      with:
+        fetch-depth: 0
     - name: Setup-Hugo
       uses: peaceiris/actions-hugo@v2
       with:
