--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,12 @@ googleAnalytics = ""
      url = "/about"
 
   [[menu.main]]
+    identifier = "uses"
+    name = "Uses"
+    url = "/uses"
+    weight = 3
+
+  [[menu.main]]
     identifier = "contact"
     name = "Contact"
     url = "/contact"
