build drafts on github pages

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,12 +22,6 @@ jobs:
 
       - name: Build
         run: hugo --minify
-
-      - name: Deploy Github Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
         
       - name: Deploy-WebDav
         uses: bxb100/action-upload-webdav@v1
@@ -38,3 +32,27 @@ jobs:
           webdav_upload_path: ${{secrets.WEBDAV_PATH}}
           files: "./public/**"
           keep_structure: true
+ 
+  gh-pages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: '0'   # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: latest
+          extended: true
+
+      - name: Build
+        run: hugo --buildDrafts --verbose --gc
+      - name: Deploy Github Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+  
+      
