--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,17 +22,18 @@ jobs:
 
       - name: Build
         run: hugo --minify
-        
+
       - name: Deploy-WebDav
-        uses: bxb100/action-upload-webdav@v1
+        uses: bxb100/action-upload@main
         with:
-          webdav_address: ${{secrets.WEBDAV_ADDRESS}}
-          webdav_username: ${{secrets.WEBDAV_USERNAME}}
-          webdav_password: ${{secrets.WEBDAV_PASSWORD}}
-          webdav_upload_path: ${{secrets.WEBDAV_PATH}}
-          files: "./public/**"
-          keep_structure: true
- 
+          provider: webdav
+          provider_options: |
+            endpoint=${{secrets.WEBDAV_ADDRESS}}
+            username=${{secrets.WEBDAV_USERNAME}}
+            password=${{secrets.WEBDAV_PASSWORD}}
+            root=${{secrets.WEBDAV_PATH}}
+          include: "./public/**"
+
   gh-pages:
     runs-on: ubuntu-latest
     steps:
@@ -54,5 +55,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-  
-      
+
+
